--- a/tarimzeka-mobile/app.json
+++ b/tarimzeka-mobile/app.json
@@ -41,7 +41,7 @@
       ]
     ],
     "extra": {
-      "apiUrl": "http://192.168.1.7:3000/api"
+      "apiUrl": "https://tarimzeka-api.onrender.com/api"
     },
     "experiments": {
       "typedRoutes": true
