--- a/tarimzeka-mobile/package.json
+++ b/tarimzeka-mobile/package.json
@@ -39,7 +39,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-preset-expo": "^54.0.10"
+    "babel-preset-expo": "^54.0.10",
+    "dotenv": "^17.2.4"
   },
   "private": true
 }
