--- a/tarimzeka-backend/package.json
+++ b/tarimzeka-backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.13.3",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
@@ -20,8 +21,8 @@
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
-    "nodemailer": "^6.9.14",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
